infra/k8s-dev/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 3000

          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tickets-svc
                port:
                  number: 3000

          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-svc
                port:
                  number: 3000

          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payments-svc
                port:
                  number: 3000

          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 3000

    - host: auth.db
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-mongo-express-svc
                port:
                  number: 8081

    - host: tickets.db
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tickets-mongo-express-svc
                port:
                  number: 8081

    - host: orders.db
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orders-mongo-express-svc
                port:
                  number: 8081

    - host: payments.db
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payments-mongo-express-svc
                port:
                  number: 8081
